--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
+    background-attachment: fixed;
 }
 
 @media (min-width: 768px) {
@@ -89,7 +90,7 @@ body>* {
 }
 
 .quem-somos {
-    margin-top: 20px;
+    margin: 20px 0px;
 }
 
 .toggle {
